# nice-lad

./: AUTHORS  CMakeLists.txt  README.md
conf/: CMakeLists.txt  nice_lad.conf.in
packaging/: nice-lad.spec
src/: CMakeLists.txt  main.cpp
src/Audit/: AuditWrapper.cpp  AuditWrapper.h  Auditctl.cpp  Auditctl.h  AuparseSourceFeedWrapper.cpp  AuparseSourceFeedWrapper.h  AuparseWrapper.cpp  AuparseWrapper.h  BaseAuditWrapper.h  BaseAuparseWrapper.h  ErrorException.h  EventHandler.h  Parser.cpp  Parser.h  SyscallRuleData.cpp  SyscallRuleData.h
src/Lad/: AuditEventHandler.cpp  AuditEventHandler.h  AuditRulesPopulator.cpp  AuditRulesPopulator.h  DataCollector.h  DataProvider.h  DummyDataProvider.cpp  DummyDataProvider.h  Options.cpp  Options.h  SyslogDataCollector.cpp  SyslogDataCollector.h
src/Log/: log.cpp  log.h
src/SecurityManager/: BaseSecurityManagerWrapper.h  DataProvider.cpp  DataProvider.h  ErrorException.h  SecurityManagerWrapper.cpp  SecurityManagerWrapper.h
src/Systemd/: DataCollector.cpp  DataCollector.h
src/Utils/: Feed.cpp  Feed.h  SignalFd.cpp  SignalFd.h  WithMessageException.h
tests/: CMakeLists.txt  main.cpp
tests/Audit/: FakeAuditWrapper.h  FakeAuparseWrapper.h  FakeSyscallRuleData.h  auditctl.cpp  parser.cpp  syscall_rule_data.cpp
tests/Lad/: audit_event_handler.cpp
tests/SecurityManager/: FakeSecurityManagerWrapper.h  data_provider.cpp
tests/Utils/: with_message_exception.cpp
